--- a/front/src/style/tailwind.css
+++ b/front/src/style/tailwind.css
@@ -5,7 +5,7 @@
 /* btn-blue */
 .btn-blue {
     @apply text-white bg-blue-500 border border-solid border-blue-400 uppercase text-base
-        px-4 py-2 rounded-full outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+        px-4 py-2 rounded-full outline-none ease-linear transition-all duration-150;
 }
 
 .btn-blue:hover {
@@ -23,7 +23,7 @@
 /* btn-red */
 .btn-red {
     @apply text-white bg-red-500 border border-solid border-red-400 uppercase text-base
-        px-4 py-2 rounded-full outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+        px-4 py-2 rounded-full outline-none ease-linear transition-all duration-150;
 }
 
 .btn-red:hover {
@@ -41,7 +41,7 @@
 /* btn-yellow */
 .btn-yellow {
     @apply text-gray-800 bg-yellow-400 border border-solid border-yellow-400 uppercase text-base
-        px-4 py-2 rounded-full outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+        px-4 py-2 rounded-full outline-none ease-linear transition-all duration-150;
 }
 
 .btn-yellow:hover {
@@ -59,7 +59,7 @@
 /* btn-gray */
 .btn-gray {
     @apply text-white bg-gray-700 border border-solid border-gray-700 uppercase text-base
-        px-4 py-2 rounded-full outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+        px-4 py-2 rounded-full outline-none ease-linear transition-all duration-150;
 }
 
 .btn-gray:hover {
@@ -77,7 +77,7 @@
 /* btn-green */
 .btn-green {
     @apply text-white bg-green-500 border border-solid border-green-500 uppercase text-base
-        px-4 py-2 rounded-full outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+        px-4 py-2 rounded-full outline-none ease-linear transition-all duration-150;
 }
 
 .btn-green:hover {
