--- a/front/src/style/tailwind.css
+++ b/front/src/style/tailwind.css
@@ -74,6 +74,24 @@
   @apply outline-none;
 }
 
+/* TODO: btn-yellow-tag by Sarah */
+.btn-yellow-tag {
+  @apply text-gray-800 bg-yellow-400 border border-solid border-yellow-400 uppercase text-sm
+        rounded-full outline-none ease-linear transition-all duration-150;
+}
+
+.btn-yellow-tag:hover {
+  @apply bg-yellow-500 border-yellow-500;
+}
+
+.btn-yellow-tag:active {
+  @apply bg-yellow-500;
+}
+
+.btn-yellow-tag:focus {
+  @apply outline-none;
+}
+
 /* btn-gray */
 .btn-gray {
   @apply text-white bg-gray-700 border border-solid border-gray-700 uppercase text-base
